package api

import (
	"context"

	. "github.com/getzion/relay/gen/proto/identityhub/v1"
)

func ThreadsQuery(ctx context.Context, r *Request) (string, error) {
	return "", nil
}

func ThreadsCreate(ctx context.Context, r *Request) (string, error) {
	return "", nil
}

func ThreadsReply(ctx context.Context, r *Request) (string, error) {
	return "", nil
}

func ThreadsClose(ctx context.Context, r *Request) (string, error) {
	return "", nil
}

func ThreadsDelete(ctx context.Context, r *Request) (string, error) {
	return "", nil
}
